<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintWeight"
        android:inputType="numberDecimal"/>

    <RadioGroup
        android:id="@+id/radioGroupWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radioButtonKG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kilograms"/>
        <RadioButton
            android:id="@+id/radioButtonLBS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pounds"/>
    </RadioGroup>

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintHeight"
        android:inputType="numberDecimal"/>

    <RadioGroup
        android:id="@+id/radioGroupHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radioButtonCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centimeters"/>
        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meters"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"/>

        <Button
            android:id="@+id/buttonResetData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi"/>

    <TextView
        android:id="@+id/textViewBMIRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>